@@ -2212,4 +2212,51 @@ width and height. (See set_homogenous())
 </return>
 </function>
 
+
+<!-- I don't know what this GTK+ documentation means by "update its internal state". murrayc. -->
+<function name="gtk_widget_add_mnemonic_label">
+<description>
+Adds a widget to the list of mnemonic labels for
+this widget. (See gtk_widget_list_mnemonic_labels()). Note the
+list of mnemonic labels for the widget is cleared when the
+widget is destroyed, so the caller must make sure to update
+its internal state at this point as well.
+
+Since: 2.4
+
+</description>
+<parameters>
+<parameter name="widget">
+<parameter_description> a #GtkWidget
+</parameter_description>
+</parameter>
+<parameter name="label">
+<parameter_description> a #GtkWidget that acts as a mnemonic label for @widget.
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
+
+<function name="gtk_container_remove">
+<description>
+Removes @widget from @container. @widget must be inside @container.
+If @widget is managed with Gtk::manage(), and you don&apos;t want to use @widget
+again then you should delete @widget, because there will no longer be any parent 
+container to delete it automatically.
+</description>
+<parameters>
+<parameter name="container">
+<parameter_description> a #GtkContainer
+</parameter_description>
+</parameter>
+<parameter name="widget">
+<parameter_description> a current child of @container
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
 </root>
