@@ -1,5 +1,12 @@
 2006-10-10  Murray Cumming  <murrayc@murrayc.com>
 
+	* gtk/src/gtk_docs_override.xml: Correct the documentation for 
+	gtk_container_remove() and gtk_widget_add_mnemonic_label() to 
+	avoid mention of non-existant destroy signal and destroy() method.
+	Thanks to Nickolai Dobrynin for pointing this out.
+
+2006-10-10  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/index.html: Correct the links to the Memory Management 
 	and libglademm chapters.
 
